Tests refactor and fix